// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form #render should render gux-form component as expected (1) 1`] = `
<gux-form-beta>
  <template shadowrootmode="open">
    <slot>
    </slot>
  </template>
  <form>
    <header>
      <gux-form-heading>
        <h1 slot="heading">
          Form Heading
        </h1>
      </gux-form-heading>
      <gux-form-description>
        <p slot="description">
          This is a simple paragraph to accompany the form header.
        </p>
      </gux-form-description>
    </header>
    <fieldset>
      <legend>
        <gux-form-fieldset-heading>
          <h2 slot="heading">
            Form Fieldset Header
          </h2>
        </gux-form-fieldset-heading>
        <gux-form-description>
          <p slot="description">
            This is a simple paragraph to accompany the fieldset header.
          </p>
        </gux-form-description>
      </legend>
      <gux-form-field-text-like label-position="above">
        <input slot="input" type="text" name="lp-3">
        <label slot="label">
          Fieldset Form field label
        </label>
      </gux-form-field-text-like>
    </fieldset>
    <gux-form-field-text-like label-position="above">
      <input slot="input" type="text" name="lp-3">
      <label slot="label">
        Fieldset Form field label
      </label>
    </gux-form-field-text-like>
    <gux-form-footer placement="page-desktop">
      <footer>
        <gux-button accent="primary">
          Primary
        </gux-button>
        <gux-button accent="secondary">
          Secondary
        </gux-button>
      </footer>
    </gux-form-footer>
  </form>
</gux-form-beta>
`;

exports[`gux-form #render should render gux-form component as expected (2) 1`] = `
<gux-form-beta>
  <template shadowrootmode="open">
    <slot>
    </slot>
  </template>
  <form>
    <header>
      <gux-form-heading>
        <h1 slot="heading">
          Form Heading
        </h1>
      </gux-form-heading>
      <gux-form-description>
        <p slot="description">
          This is a simple paragraph to accompany the form header.
        </p>
      </gux-form-description>
    </header>
    <fieldset>
      <legend>
        <gux-form-fieldset-heading>
          <h2 slot="heading">
            Form Fieldset Header
          </h2>
        </gux-form-fieldset-heading>
        <gux-form-description>
          <p slot="description">
            This is a simple paragraph to accompany the fieldset header.
          </p>
        </gux-form-description>
      </legend>
      <gux-form-field-text-like label-position="above">
        <input slot="input" type="text" name="lp-3">
        <label slot="label">
          Fieldset Form field label
        </label>
      </gux-form-field-text-like>
    </fieldset>
    <gux-form-field-text-like label-position="above">
      <input slot="input" type="text" name="lp-3">
      <label slot="label">
        Fieldset Form field label
      </label>
    </gux-form-field-text-like>
  </form>
</gux-form-beta>
`;
